# peregrine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Journal.md  LICENSE  README.md  TODO.md  mem_log.txt  mem_watchdog.sh  reconstruct_video.py  visualize_must3r.py
.github/workflows/: ci.yml
autoresearch/: bench_quick.sh  program.md
benches/: tensor_ops.rs  wallclock.rs
benchmarks/: BENCHMARKS.md
benchmarks/data/: comparison.md  jax.json  mlx.json  peregrine.json  peregrine_before.json  pytorch.json  tensorflow.json  tinygrad.json
docs/: RESEARCH.md  index.html
docs/results/: index.json  m1_max_64gb.json
examples/: comm_bench.rs  huffman_bench.rs  mnist_gpu_bench.rs  pipeline_bench.rs  sparse_bench.rs  systolic_bench.rs
examples/deepseek/: attention.rs  decoder.rs  main.rs  model.rs  moe.rs  tokenizer.rs
examples/gpt_oss/: attention.rs  decoder.rs  main.rs  model.rs  moe.rs  tokenizer.rs
examples/grok1/: attention.rs  decoder.rs  main.rs  model.rs  moe.rs  tokenizer.rs
examples/llama/: attention.rs  decoder.rs  main.rs  model.rs  tokenizer.rs  wandb.rs
examples/mnist/: main.rs
examples/moba/: entities.rs  env.rs  game.rs  main.rs  policy.rs  render.rs
examples/must3r/: README.md  decoder.rs  encoder.rs  head.rs  main.rs  model.rs  rope2d.rs
examples/rl_demo/: main.rs
examples/rlm/: attention.rs  decoder.rs  main.rs  model.rs
examples/rt_detr/: README.md  dataset.rs  main.rs  model.rs  wandb.rs
peregrine-bench/: Cargo.toml
peregrine-bench/src/: hardware.rs  main.rs  suite.rs
peregrine-py/: Cargo.toml  pyproject.toml
peregrine-py/python/peregrine/: __init__.py
peregrine-py/src/: lib.rs  py_inference.rs  py_nn.rs  py_tensor.rs
peregrine-py/tests/: test_tensor.py
scripts/: bench.sh  bench_compare.sh  bench_jax.py  bench_mlx.py  bench_pytorch.py  bench_tensorflow.py  bench_tinygrad.py  compare_bench.py  convert_deepseek.py  convert_gpt_oss.py  convert_grok1.py  convert_huffman.py  convert_must3r.py  convert_weights_int8.py  export_coreml.py
src/: amx.rs  attention.rs  cpu_pool.rs  dataset.rs  debug.rs  detection.rs  envs.rs  fft.rs  gguf.rs  hf_config.rs  hf_hub.rs  huffman.rs  init.rs  lib.rs  linalg.rs  main.rs  nn.rs  optim.rs  quant.rs  random.rs  rl.rs  rlm.rs  safetensors.rs  sched.rs  serial.rs  simd_kernels.rs  sparse.rs  speculative.rs  tensor.rs  thermal.rs  transforms.rs
src/comm/: bootstrap.rs  communicator.rs  error.rs  mod.rs  ring.rs  shm.rs  signal.rs
src/metal/: buffer.rs  context.rs  mod.rs  pipeline.rs  pool.rs  sched.rs  shaders.rs
src/models/llama/: attention.rs  decoder.rs  mod.rs  model.rs  tokenizer.rs
tests/: activations.rs  attention.rs  comm_ring.rs  generate_reference.py  gguf_parity.rs  huffman_parity.rs  metal_autograd.rs  metal_basics.rs  metal_parity.rs  pytorch_parity.rs  quant_parity.rs  sparse_parity.rs  speculative.rs
