[package]
name = "peregrine"
version = "0.4.0"
edition = "2021"

[dependencies]
rayon = "1"

[dev-dependencies]
image = "0.25"
quick-xml = "0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[[example]]
name = "rt_detr"
path = "examples/rt_detr/main.rs"

[[example]]
name = "mnist"
path = "examples/mnist/main.rs"
