[package]
name = "peregrine"
version = "0.4.0"
edition = "2021"

[features]
default = []
metal = ["objc2", "objc2-foundation", "objc2-metal"]

[dependencies]
rayon = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", optional = true }
objc2-foundation = { version = "0.3", default-features = false, features = ["NSString", "NSError"], optional = true }
objc2-metal = { version = "0.3", default-features = false, features = [
    "MTLDevice",
    "MTLBuffer",
    "MTLResource",
    "MTLCommandQueue",
    "MTLCommandBuffer",
    "MTLCommandEncoder",
    "MTLComputeCommandEncoder",
    "MTLComputePipeline",
    "MTLLibrary",
    "MTLTypes",
], optional = true }

[dev-dependencies]
image = "0.25"
quick-xml = "0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "tensor_ops"
harness = false

[[example]]
name = "rt_detr"
path = "examples/rt_detr/main.rs"

[[example]]
name = "mnist"
path = "examples/mnist/main.rs"
