[workspace]
members = [".", "peregrine-py", "peregrine-bench"]

[package]
name = "peregrine"
version = "0.11.0"
edition = "2021"

[features]
default = []
metal = ["objc2", "objc2-foundation", "objc2-metal"]
comm = []
hf = ["ureq"]

[dependencies]
rayon = "1"
libc = "0.2"
ureq = { version = "2", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", optional = true }
objc2-foundation = { version = "0.3", default-features = false, features = ["NSString", "NSError"], optional = true }
objc2-metal = { version = "0.3", default-features = false, features = [
    "MTLDevice",
    "MTLBuffer",
    "MTLResource",
    "MTLCommandQueue",
    "MTLCommandBuffer",
    "MTLCommandEncoder",
    "MTLComputeCommandEncoder",
    "MTLComputePipeline",
    "MTLLibrary",
    "MTLTypes",
    "MTLEvent",
], optional = true }

[dev-dependencies]
image = "0.25"
quick-xml = "0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "tensor_ops"
harness = false

[[bench]]
name = "wallclock"
harness = false

[[example]]
name = "rt_detr"
path = "examples/rt_detr/main.rs"

[[example]]
name = "mnist"
path = "examples/mnist/main.rs"

[[example]]
name = "must3r"
path = "examples/must3r/main.rs"

[[example]]
name = "rl_demo"
path = "examples/rl_demo/main.rs"

[[example]]
name = "grok1"
path = "examples/grok1/main.rs"

[[example]]
name = "deepseek"
path = "examples/deepseek/main.rs"

[[example]]
name = "gpt_oss"
path = "examples/gpt_oss/main.rs"

[[example]]
name = "moba"
path = "examples/moba/main.rs"

[[example]]
name = "systolic_bench"
path = "examples/systolic_bench.rs"

[[example]]
name = "comm_bench"
path = "examples/comm_bench.rs"
required-features = ["comm"]

[[example]]
name = "llama"
path = "examples/llama/main.rs"

[[example]]
name = "sparse_bench"
path = "examples/sparse_bench.rs"

[[example]]
name = "huffman_bench"
path = "examples/huffman_bench.rs"
