[package]
name = "peregrine-bench"
version = "0.1.0"
edition = "2021"
description = "Reproducible benchmark suite for Peregrine"

[[bin]]
name = "peregrine-bench"
path = "src/main.rs"

[features]
default = []
metal = ["peregrine-ml/metal"]

[dependencies]
peregrine-ml = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
